@@ -255,6 +255,15 @@ SCHEDULER_AVAILABLE_SUSPENDED_RESOURCE_TYPE="default"
 # policy. Default is 1 day (86400s)
 #ACCOUNTING_WINDOW="86400"
 
+##############################
+# OCAML Scheduler parameters #
+###############################################################################
+# You can use hierarchy_extractor.rb to generate those variables
+#HIERARCHY_LABELS="node,cpu,core"
+#node="(1,16,2), (33,8,4)" 
+#cpu="(1,8,8)"
+#core="(1,1,64)"
+
 ##############################################
 
 ##############################################################
