@@ -4,6 +4,7 @@ OAR CHANGELOG
 version 2.5.0:
   - New "Phoenix" tool to try to reboot automatically broken nodes
     (to setup into /etc/oar/oar_phoenix.pl)
+  - New (experimental!) scheduler written in Ocaml
 
 version 2.4.2:
 --------------
